Revert "New Theme"
This reverts commit 44958206c76065c6c8fd35d4b8a91cf8955d5873.

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ url: https://knewhart.github.io/
 baseurl: "" # the subpath of your site, e.g. /blog
 
 # Build settings
-remote_theme: jekyllt/jasper2
+theme: minima
 plugins:
   - jekyll-feed
 
