--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,11 @@ theme: minima
 plugins:
   - jekyll-feed
 
+# remote_theme: daattali/beautiful-jekyll
+# plugins:
+  # - jekyll-feed
+  # - jekyll-remote-theme 
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
