--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,8 @@ description: >- # this means to ignore newlines
   Teacher, environmental engineer, researcher, data scientist
 twitter_username: DrKateNewhart
 github_username:  KNewhart
+researchgate_username: Kathryn-Newhart
+googlescholar_username: Kathryn B. Newhart
 domain: knewhart.github.io
 url: https://knewhart.github.io/
 baseurl: "" # the subpath of your site, e.g. /blog
