First post and cosmetic mods

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: kathryn.newhart@westpoint.edu
 description: >- # this means to ignore newlines
   Teacher, environmental engineer, researcher, data scientist
 twitter_username: DrKateNewhart
-github_username:  KNewhart
+#github_username:  KNewhart
 researchgate_username: Kathryn-Newhart
 googlescholar_username: Kathryn B. Newhart
 domain: knewhart.github.io
